# bayesian_listener

./: .gitignore  .readthedocs.yml  CONTRIBUTING.rst  HISTORY.rst  README.md  conftest.py  pyproject.toml
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
bayesian_listener/: __init__.py  auditory_representation.py  bayesian_listener.py  coordinates.py  fitting.py  metrics.py  plotting.py  resample.py  utils.py
docs/: Makefile  api_reference.rst  background.rst  bayesian_listener.rst  conf.py  getting_started.rst  index.rst  make.bat  refs.bib
docs/_static/: header.rst
docs/_static/css/: custom.css
docs/api/: bayesian_listener.rst  evaluation.rst  fitting.rst  hrtf.rst  index.rst  metrics.rst  model.rst  plotting.rst  resample.rst  statistics.rst  utils.rst
docs/classes/: bayesian_listener.rst
docs/guides/: compare_interpolation.rst  fit_model.rst  index.rst  simulate_responses.rst  understand.rst  workflows.rst
docs/modules/: bayesian_listener.rst  metrics.rst  resample.rst  utils.rst
tests/: __init__.py  test_bayesian_listener.py  test_fitting.py  test_guide_compare_interpolation.py  test_guide_fit_model.py  test_guide_simulate.py  test_guide_understand.py  test_imports.py  test_metrics.py  test_resample.py
