[project]
name = "bayesian_listener"
version = "0.1"
description = "Perceptually-grounded spatial audio localization model implementing Bayesian inference for HRTF evaluation and individualization."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    { name = "Roberto Barumerli", email = "r.barumerli@imperial.ac.uk" },
    { name = "Fabian Brinkmann", email = "f.brinkmann@tu-berlin.de" },
    { name = "Anton Hoyer", email = "a.hoyer@tu-berlin.de" },
    { name = "Emanuele Zanoni", email = "emanuele.zanoni@phd.unipd.it" }
]
keywords = [
    'auditory model',
     'barumerli2023'
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

]
dependencies = [
    'numpy',
    'scipy',
    'matplotlib',
    'pyfar',
    'sofar',
    'numba',
    'pandas',
    'psutil',
    'spharpy',
    'joblib',
    'pybads'
]

[project.optional-dependencies]
deploy = [
    "twine",
    "wheel",
    "build",
    "setuptools",
    "bump-my-version",
    ]
tests = [
    "pytest",
    "pytest-cov",
    "watchdog",
    "ruff==0.8.3",
    "coverage",

]
docs = [
    "sphinx",
    "autodocsumm>=0.2.14",
    "sphinx_mdinclude",
    "sphinx_copybutton",
    "sphinx-design",
    "furo>=2024.5.6",
    "sphinx-favicon",
    "sphinx-reredirects",
    "sphinxcontrib-bibtex"
]
dev = ["bayesian_listener[deploy,tests,docs]"]

[project.urls]
Tracker = "https://github.com/robaru/bayesian_listener_package/issues"
Documentation = "https://bayesian_listener.readthedocs.io/"
Download = "https://pypi.org/project/bayesian_listener/"
Homepage = "https://bayesian_listener.readthedocs.io/"
Source = "https://github.com/robaru/bayesian_listener_package"
Changelog = "https://github.com/robaru/bayesian_listener_package/blob/main/HISTORY.rst"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters


[tool.pytest.ini_options]
addopts = "-m 'not guide'"
markers = ["guide: documentation guide tests, skipped by default (run with -m guide)"]

[tool.ruff]
exclude = [
    ".git",
    "docs",
]
line-length = 100
lint.ignore = [
    "D200",   # One-line docstring should fit on one line with quotes
    "D202",   # No blank lines allowed after function docstring
    "D205",   # 1 blank line required between summary line and description
    "D401",   # First line should be in imperative mood
    "D404",   # First word of the docstring should not be "This"
    "B006",   # Do not use mutable data structures for argument defaults
    "B008",   # Do not perform calls in argument defaults
    "PT018",  # Assertion should be broken down into multiple parts
    "PT019",  # Fixture `_` without value is injected as parameter
    "NPY002", # Replace legacy np.random calls — non-trivial API change
]
lint.select = [
    "B",      # bugbear extension
    "ARG",    # Remove unused function/method arguments
    "C4",     # Check for common security issues
    "E",      # PEP8 errors
    "F",      # Pyflakes
    "W",      # PEP8 warnings
    "D",      # Docstring guidelines
    "NPY",    # Check all numpy related deprecations
    "D417",   # Missing argument descriptions in the docstring
    "PT",     # Pytest style
    "A",      # Avoid builtin function and type shadowing
    "ERA",    # No commented out code
    "NPY",    # Check all numpy related deprecations
    "COM",    # trailing comma rules
    "I002",   # missing required import
    "TID252", # Use absolute over relative imports
    "FIX",    # Code should not contain FIXME, TODO, etc
]

# Ignore missing docstrings in tests
[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100",
    "D101",
    "D103",
    "D104",
    "ERA001",  # doc-marker comments (# [section] / # [/section]) are intentional
]
"conftest.py" = ["ERA001"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.bumpversion]
current_version = "#"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = true
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = '\nversion = "{current_version}"'
replace = '\nversion = "{new_version}"'

[[tool.bumpversion.files]]
filename = "bayesian_listener/__init__.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"
